# Xorshift

./: CMakeLists.txt  README.md  const.h  main.c  tests.c  wiki.c  wiki.h  xor.h
